--- a/Missions_to_Mars/mission_to_mars.ipynb
+++ b/Missions_to_Mars/mission_to_mars.ipynb
@@ -54,6 +54,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Visit URL and parse with BeautifulSoup\n",
     "url ='https://redplanetscience.com/'\n",
     "browser.visit(url)\n",
     "html = browser.html\n",
@@ -77,6 +78,7 @@
     }
    ],
    "source": [
+    "# Find first news title\n",
     "news_title = soup.find_all('div', class_='content_title')[0].text\n",
     "news_title"
    ]
@@ -98,6 +100,7 @@
     }
    ],
    "source": [
+    "# Find text of first title\n",
     "news_p = soup.find_all('div', class_='article_teaser_body')[0].text\n",
     "news_p"
    ]
@@ -108,6 +111,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Exit browser\n",
     "browser.quit()"
    ]
   },
@@ -147,6 +151,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Visit URL\n",
     "url ='https://spaceimages-mars.com/'\n",
     "browser.visit(url)"
    ]
@@ -157,6 +162,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Parse with BeautifulSoup\n",
     "html = browser.html\n",
     "soup = BeautifulSoup(html, 'html.parser')"
    ]
@@ -178,6 +184,7 @@
     }
    ],
    "source": [
+    "# Find partial URL for image and add to original URL\n",
     "partial_url = soup.find_all('a',class_=\"showimg\")[0]['href']\n",
     "featured_image_url = url + partial_url\n",
     "featured_image_url"
@@ -189,6 +196,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Exit browser\n",
     "browser.quit()"
    ]
   },
@@ -205,6 +213,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Visit URL\n",
     "url = 'https://galaxyfacts-mars.com/'\n",
     "browser.visit(url)"
    ]
@@ -243,6 +252,7 @@
     }
    ],
    "source": [
+    "# Use Pandas .read_html to find table\n",
     "mars_facts = pd.read_html(url)\n",
     "mars_facts"
    ]
@@ -335,6 +345,7 @@
     }
    ],
    "source": [
+    "# Make first row into column headers, drop first row and reset index\n",
     "mars_facts_df = mars_facts[0]\n",
     "header_row = 0\n",
     "mars_facts_df.columns = mars_facts_df.iloc[header_row]\n",
@@ -360,6 +371,7 @@
     }
    ],
    "source": [
+    "# Turn DataFrame into html table\n",
     "mars_facts_html = mars_facts_df.to_html()\n",
     "mars_facts_html"
    ]
@@ -370,6 +382,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Exit browser\n",
     "browser.quit()"
    ]
   },
@@ -409,6 +422,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Visit URL\n",
     "url = 'https://marshemispheres.com/'\n",
     "browser.visit(url)"
    ]
@@ -419,6 +433,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Parse with BeautifulSoup\n",
     "html = browser.html\n",
     "soup = BeautifulSoup(html, 'html.parser')"
    ]
@@ -443,6 +458,7 @@
     }
    ],
    "source": [
+    "# Find all h3 titles\n",
     "titles = soup.find_all('h3')[:-1]\n",
     "titles"
    ]
@@ -467,6 +483,7 @@
     }
    ],
    "source": [
+    "# Loop through titles and pull out only text\n",
     "title_ls = []\n",
     "for title in titles:\n",
     "    title_ls.append(title.text)\n",
@@ -480,6 +497,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# For each title, use browser.click to visit page and find partial image url\n",
     "url_ls = []\n",
     "\n",
     "for title in title_ls:\n",
@@ -517,6 +535,7 @@
     }
    ],
    "source": [
+    "# List out URLs\n",
     "url_ls"
    ]
   },
@@ -526,6 +545,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Exit browser\n",
     "browser.quit()"
    ]
   }
